# library_management

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_book_active_loan_count.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  book.py  loan.py  member.py  user.py
backend/app/domain/repositories/: __init__.py  book_repository.py  loan_repository.py  member_repository.py
backend/app/grpc_app/: server.py
backend/app/grpc_app/converters/: __init__.py  book.py  loan.py  member.py  time.py
backend/app/grpc_app/dto/: __init__.py  _base.py  _parse.py  book.py  loan.py  member.py
backend/app/grpc_app/interceptors/: __init__.py  auth.py  errors.py
backend/app/grpc_app/servicers/: __init__.py  _session.py  auth_servicer.py  book_servicer.py  loan_servicer.py  (+1 more)
backend/app/grpc_gen/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  book_pb2.py  book_pb2.pyi  book_pb2_grpc.py  common_pb2.py  common_pb2.pyi  loan_pb2.py  loan_pb2.pyi  loan_pb2_grpc.py  member_pb2.py  member_pb2.pyi  member_pb2_grpc.py
backend/app/services/: auth_service.py  book_service.py  clock.py  loan_service.py  member_service.py  response_type.py
backend/tests/: conftest.py
backend/tests/component/: test_auth.py  test_books_members.py  test_borrow_return.py
backend/tests/unit/: test_loan_entity.py  test_password_hasher.py
(+40 files in other folders)
